# madpose

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  hybrid_pose_estimator.h  hybrid_pose_shared_focal_estimator.h  hybrid_ransac.h  ruff.toml  setup.py  solver.cpp  solver.h  uncertainty_ransac.h  utils.h
examples/: calibrated.py  shared_focal.py  two_focal.py
examples/image_pairs/0_scannet/: info.json  superglue_matches_0.npy  superglue_matches_1.npy
examples/image_pairs/1_eth3d/: da-met_depth_0.npy  da-met_depth_1.npy  info.json  lightglue_matches_0.npy  lightglue_matches_1.npy
examples/image_pairs/2_2d3ds/: info.json  mast3r_depth_0.npy  mast3r_depth_1.npy  mast3r_matches_0.npy  mast3r_matches_1.npy  mast3r_pose.json
madpose/: __init__.py  utils.py
scripts/: clang_format.sh
scripts/format/: clang_format.sh
solver_py/: scale_and_shift.py  scale_and_shift_shared_focal.py  scale_and_shift_two_focal.py  shift_and_scale_shared_focal.py  shift_and_scale_two_focal.py
src/: .clang-format  CMakeLists.txt  bindings.cpp  cost_functions.h  estimator_config.h  hybrid_pose_estimator.cpp  hybrid_pose_estimator.h  hybrid_pose_shared_focal_estimator.cpp  hybrid_pose_shared_focal_estimator.h  hybrid_pose_two_focal_estimator.cpp  hybrid_pose_two_focal_estimator.h  hybrid_ransac.h  optimizer.h  optimizer_config.h  point_cloud_pose_estimator.cpp  point_cloud_pose_estimator.h  pose.h  pose_scale_shift_estimator.cpp  pose_scale_shift_estimator.h  ransac.h  scale_offset_estimator.cpp  scale_offset_estimator.h  solver.cpp  solver.h  utils.h
